<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">CommonWeather</string>
    <string name="lang" tools:ignore="MissingTranslation">en</string>
    <string name="today" tools:ignore="MissingTranslation">Today</string>
    <string name="pressure" tools:ignore="MissingTranslation">Pressure</string>
    <string name="chance_of_rain" tools:ignore="MissingTranslation">Chance of rain</string>
    <string name="uv" tools:ignore="MissingTranslation">UV</string>
    <string name="real_feel" tools:ignore="MissingTranslation">Real feel</string>
    <string name="humidity" tools:ignore="MissingTranslation">Humidity</string>
    <string name="_3_day_forecast" tools:ignore="MissingTranslation">3-day forecast</string>
    <string name="more_details" tools:ignore="MissingTranslation">More details></string>
    <string name="_24_hour_forecast" tools:ignore="MissingTranslation">24-hour forecast</string>
    <string name="data_provided_by_weather_api" tools:ignore="MissingTranslation">data provided by Weather API</string>
    <string name="celsius" translatable="false">C</string>
    <string name="degree" translatable="false">°</string>
    <string name="loading">loading…</string>
    <string name="moscow">Moscow</string>
    <string name="km_h" tools:ignore="MissingTranslation">km/h</string>
    <string name="mbar" tools:ignore="MissingTranslation">mbar</string>
    <string name="south">South</string>
    <string name="north">North</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="south_east">South East</string>
    <string name="south_west">South West</string>
    <string name="north_east">North East</string>
    <string name="north_west">North West</string>
    <string name="updated">"updated: "</string>
    <string name="now">"Now"</string>
    <string name="error_loading">Loading error</string>
    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>
    <string name="at">at</string>
    <string name="feels_like">"Feels like: "</string>
    <string name="app_widget_description">Current weather</string>


</resources>