<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/weather_card_bgr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        tools:ignore="TextSizeCheck">


        <TextView
            android:id="@+id/tv_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_pressure"
            tools:text="1014mbar" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_chance_of_rain"
            app:layout_constraintEnd_toEndOf="@+id/tv_humidity_value"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pressure"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_pressure_value"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_uv"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_chance_of_rain_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_chance_of_rain"
            tools:text="80%" />

        <TextView
            android:id="@+id/tv_chance_of_rain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="4dp"
            android:text="@string/chance_of_rain"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_chance_of_rain_value"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_feels_like_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_feels_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_feels_like"
            tools:text="30" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_uv"
            app:layout_constraintEnd_toEndOf="@+id/tv_humidity_value"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_feels_like" />

        <TextView
            android:id="@+id/tv_uv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/uv"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_uv_value"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_feels_like"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_feels_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/real_feel"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_feels_like_value"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_pressure"
            app:layout_constraintEnd_toEndOf="@+id/tv_humidity_value"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_uv" />

        <TextView
            android:id="@+id/tv_uv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_uv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_uv"
            tools:text="2" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/humidity"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_humidity"
            tools:text="60%" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_feels_like"
            app:layout_constraintEnd_toEndOf="@+id/tv_humidity_value"
            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
